<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@drawable/background" >
    
	<LinearLayout
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="60dp"
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent">
		<TextView
		    android:layout_margin="10dp"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:textSize="20dp"
		    android:padding="8dip"
		    android:textColor="#000000"
		    android:background="#22111111"
		    android:text="@string/input_name" />
	   	<EditText
	   	    android:layout_margin="10dp"
			android:id="@+id/NewGameServername"
		    android:layout_height="wrap_content" 
		    android:layout_width="match_parent"
			android:inputType="textPersonName" />
	</LinearLayout>
    
	
	<LinearLayout
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent">
	
		<Button
		    android:textStyle="bold" 
			android:id="@+id/Create"
			android:layout_margin="10dp"
			android:background="@drawable/welcome_btn"
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent" 
		    android:text="@string/create_game" />
		
		<Button
		    android:textStyle="bold" 
			android:id="@+id/Back"
			android:layout_margin="10dp"
			android:background="@drawable/welcome_btn"
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent" 
		    android:text="@string/game_back" />
	</LinearLayout>
	
</RelativeLayout>
